@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/ss
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.69 2008/06/14 10:11:27 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.70 2008/06/18 09:17:08 vapier Exp $
+
+*ss-1.40.11 (18 Jun 2008)
+
+  18 Jun 2008; Mike Frysinger <vapier@gentoo.org> +ss-1.40.11.ebuild:
+  Version bump.
 
   14 Jun 2008; Christoph Mende <angelos@gentoo.org> ss-1.40.9.ebuild:
   Stable on amd64, bug #225239
